--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,11 @@ h3 {
 		font-size: 12px;
 	}
 	.allPoke {
-		margin: none;
+		margin-bottom: 0;
+		margin-top: 5px;
 		flex-direction: column;
 		align-items: center;
+		border-bottom: double;
 	}
 	.other,
 	.stat {
@@ -187,6 +189,7 @@ h3 {
 		padding: 0px;
 	}
 	.skewingRight {
+		width: 50%;
 		transform: none;
 		padding: 0px;
 	}
@@ -198,8 +201,12 @@ h3 {
 		min-width: 0;
 	}
 	.skewHolder {
+		padding: 0;
 		display: flex;
 		justify-content: center;
+	}
+	.stat {
+		margin-top: 30px;
 	}
 	.type img {
 		width: 15px;
